--- a/template/ManageUserMembership.html
+++ b/template/ManageUserMembership.html
@@ -103,7 +103,7 @@ supporting your business. <a href="">Learn more</a> of different memberships and
 				<td>Monthly Payment ($)</td>
 				<td>Last Payment Received</td>
 				<td>Last Payment Amount</td>
-				<td>Exipration Date</td>
+				<td>Expiration Date</td>
 				<td></td>
 			</tr>
 	</thead>
@@ -168,13 +168,13 @@ supporting your business. <a href="">Learn more</a> of different memberships and
 		</div>
 		
 		<!-- paypal button -->		
-		<div style="float:right;"
-		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-		<input type="hidden" name="cmd" value="_s-xclick">
-		<input type="hidden" name="hosted_button_id" value="MDHCW45BKX2TJ">
-		<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-		<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-		</form>
+		<div style="float:right;">
+			<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+			<input type="hidden" name="cmd" value="_s-xclick">
+			<input type="hidden" name="hosted_button_id" value="MDHCW45BKX2TJ">
+			<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+			<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+			</form>
 		</div>
 	</div>
 </div>
