--- a/template/Membership_New.html
+++ b/template/Membership_New.html
@@ -1,5 +1,5 @@
 {% extends "/template/base.html" %}
 
 {% block main %}
-Sign up member here.
+Sign up a membership <a href="/user/membership">here</a> to activate access to this function.
 {% endblock %}
