--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -2044,10 +2044,12 @@ div.chart-filters input {
 	color: #2492c4;
 }
 .channel-message-displayer{
-	height:80%;
+	max-height:450px;
 	padding: 0 10px;
 }
-
+.y-scroll{
+	overflow-y: scroll;	
+}
 .channel-message{
 	border-bottom: 1px #ccc dotted;
 	padding:3px;
