Minor change to channel message input text color

--- a/template/base.html
+++ b/template/base.html
@@ -261,7 +261,7 @@
 	<div class="channel-message-displayer" id="channel-displayer"></div>
 	
 	<div class="channel-message-writer" style="width:100px;" id="channel-writer">
-		<input type="text" name="receiver-name" placeholder="@ah.banana.slug"/>
+		<input type="text" name="receiver-name" placeholder="@username"/>
 		<br />
 		<input type="text" name="channel-message" placeholder=""/>
 	</div>
