--- a/template/base.html
+++ b/template/base.html
@@ -258,7 +258,19 @@
 		</ul>
 		</span>
 	</td><td>
-			<img id="you-have-chat" src="http://cdn5.iconfinder.com/data/icons/ie_Birdies/128/twitter_bird_5.png" style="display:none;" title="You have got chat!"/>
+		<div class="status-tray">
+		{% if me.can_be_doc() %}
+		<img src="http://cdn4.iconfinder.com/data/icons/SIGMA/medical/png/128/doctor.png" height="30px" title="Doc role"/>
+		{% endif %}
+
+		{% if me.can_be_nur() %}
+		<img src="http://cdn3.iconfinder.com/data/icons/medicalvista/128x128/nurse.png" height="30px" tile="Nur role"/>
+		{% endif %}
+	
+		<!-- chat icon -->
+		<img id="you-have-chat" src="http://cdn5.iconfinder.com/data/icons/ie_Birdies/128/twitter_bird_5.png" style="display:none;" title="You have got chat!"/>
+		
+		</div>
 	</td><td style="text-align:right;">
 		<span>
 			{{ me.nickname }}
