Activating a membership will terminate Trial, so Trial is a one-time deal.

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -2066,6 +2066,7 @@ div.chart-filters input {
 	padding-left: 3px;
 }
 
-.status-tray img{
+.status-tray img,span{
 	height:30px;
+	vertical-align:middle;
 }
